verilogrepair/verilog-grammars/VerilogPreParser.py
# Generated from VerilogPreParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VerilogPreParser ( Parser ):

    grammarFileName = "VerilogPreParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'always'", "'and'", "'assign'", "'automatic'", 
                     "'begin'", "'buf'", "'bufif1'", "'bufif0'", "'case'", 
                     "'casex'", "'casez'", "'cell'", "'cmos'", "'config'", 
                     "'deassign'", "'default'", "'defparam'", "'design'", 
                     "'disable'", "'$fullskew'", "'$hold'", "'$nochange'", 
                     "'$period'", "'$recovery'", "'$recrem'", "'$removal'", 
                     "'$setup'", "'$setuphold'", "'$skew'", "'$timeskew'", 
                     "'$width'", "'edge'", "'else'", "'end'", "'endcase'", 
                     "'endconfig'", "'endfunction'", "'endgenerate'", "'endmodule'", 
                     "'endprimitive'", "'endspecify'", "'endtable'", "'endtask'", 
                     "'event'", "'for'", "'force'", "'forever'", "'fork'", 
                     "'function'", "'generate'", "'genvar'", "'highz1'", 
                     "'highz0'", "'if'", "'ifnone'", "'include'", "'initial'", 
                     "'inout'", "'input'", "'instance'", "'integer'", "'join'", 
                     "'large'", "'liblist'", "'library'", "'localparam'", 
                     "'macromodule'", "'medium'", "'-incdir'", "'module'", 
                     "'nand'", "'negedge'", "'nmos'", "'nor'", "'noshowcancelled'", 
                     "'not'", "'notif1'", "'notif0'", "'or'", "'output'", 
                     "'parameter'", "'PATHPULSE$'", "'pmos'", "'posedge'", 
                     "'primitive'", "'pulldown'", "'pull1'", "'pullup'", 
                     "'pull0'", "'pulsestyle_ondetect'", "'pulsestyle_onevent'", 
                     "'rcmos'", "'real'", "'realtime'", "'reg'", "'release'", 
                     "'repeat'", "'rnmos'", "'rpmos'", "'rtran'", "'rtranif1'", 
                     "'rtranif0'", "'scalared'", "'showcancelled'", "'signed'", 
                     "'small'", "'specify'", "'specparam'", "'strong1'", 
                     "'strong0'", "'supply1'", "'supply0'", "'table'", "'task'", 
                     "'time'", "'tran'", "'tranif1'", "'tranif0'", "'tri'", 
                     "'triand'", "'tri1'", "'trior'", "'trireg'", "'tri0'", 
                     "'use'", "'uwire'", "'vectored'", "'wait'", "'wand'", 
                     "'weak1'", "'weak0'", "'while'", "'wire'", "'wor'", 
                     "'xnor'", "'xor'", "'&'", "'&&'", "'&&&'", "'*'", "'**'", 
                     "'*>'", "'@'", "'^'", "'^~'", "':'", "','", "'$'", 
                     "'\"'", "'.'", "'!'", "'!='", "'!=='", "'='", "'=='", 
                     "'==='", "'=>'", "<INVALID>", "'>'", "'>='", "'>>'", 
                     "'>>>'", "'#'", "'['", "'{'", "'('", "'<'", "'<='", 
                     "'<<'", "'<<<'", "'-'", "'-:'", "'->'", "'%'", "'+'", 
                     "'+:'", "'?'", "']'", "'}'", "')'", "';'", "'/'", "'~'", 
                     "'~&'", "'~^'", "'~|'", "'|'", "'||'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'celldefine'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'end_keywords'", "'endcelldefine'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'nounconnected_drive'", 
                     "<INVALID>", "'resetall'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'``'", "<INVALID>", "'`\\`\"'", 
                     "'`\"'" ]

    symbolicNames = [ "<INVALID>", "ALWAYS", "AND", "ASSIGN", "AUTOMATIC", 
                      "BEGIN", "BUF", "BUFIFONE", "BUFIFZERO", "CASE", "CASEX", 
                      "CASEZ", "CELL", "CMOS", "CONFIG", "DEASSIGN", "DEFAULT", 
                      "DEFPARAM", "DESIGN", "DISABLE", "DLFULLSKEW", "DLHOLD", 
                      "DLNOCHANGE", "DLPERIOD", "DLRECOVERY", "DLRECREM", 
                      "DLREMOVAL", "DLSETUP", "DLSETUPHOLD", "DLSKEW", "DLTIMESKEW", 
                      "DLWIDTH", "EDGE", "ELSE", "END", "ENDCASE", "ENDCONFIG", 
                      "ENDFUNCTION", "ENDGENERATE", "ENDMODULE", "ENDPRIMITIVE", 
                      "ENDSPECIFY", "ENDTABLE", "ENDTASK", "EVENT", "FOR", 
                      "FORCE", "FOREVER", "FORK", "FUNCTION", "GENERATE", 
                      "GENVAR", "HIGHZONE", "HIGHZZERO", "IF", "IFNONE", 
                      "INCLUDE", "INITIAL", "INOUT", "INPUT", "INSTANCE", 
                      "INTEGER", "JOIN", "LARGE", "LIBLIST", "LIBRARY", 
                      "LOCALPARAM", "MACROMODULE", "MEDIUM", "MIINCDIR", 
                      "MODULE", "NAND", "NEGEDGE", "NMOS", "NOR", "NOSHOWCANCELLED", 
                      "NOT", "NOTIFONE", "NOTIFZERO", "OR", "OUTPUT", "PARAMETER", 
                      "PATHPULSEDL", "PMOS", "POSEDGE", "PRIMITIVE", "PULLDOWN", 
                      "PULLONE", "PULLUP", "PULLZERO", "PULSESTYLE_ONDETECT", 
                      "PULSESTYLE_ONEVENT", "RCMOS", "REAL", "REALTIME", 
                      "REG", "RELEASE", "REPEAT", "RNMOS", "RPMOS", "RTRAN", 
                      "RTRANIFONE", "RTRANIFZERO", "SCALARED", "SHOWCANCELLED", 
                      "SIGNED", "SMALL", "SPECIFY", "SPECPARAM", "STRONGONE", 
                      "STRONGZERO", "SUPPLYONE", "SUPPLYZERO", "TABLE", 
                      "TASK", "TIME", "TRAN", "TRANIFONE", "TRANIFZERO", 
                      "TRI", "TRIAND", "TRIONE", "TRIOR", "TRIREG", "TRIZERO", 
                      "USE", "UWIRE", "VECTORED", "WAIT", "WAND", "WEAKONE", 
                      "WEAKZERO", "WHILE", "WIRE", "WOR", "XNOR", "XOR", 
                      "AM", "AMAM", "AMAMAM", "AS", "ASAS", "ASGT", "AT", 
                      "CA", "CATI", "CL", "CO", "DL", "DQ", "DT", "EM", 
                      "EMEQ", "EMEQEQ", "EQ", "EQEQ", "EQEQEQ", "EQGT", 
                      "GA", "GT", "GTEQ", "GTGT", "GTGTGT", "HA", "LB", 
                      "LC", "LP", "LT", "LTEQ", "LTLT", "LTLTLT", "MI", 
                      "MICL", "MIGT", "MO", "PL", "PLCL", "QM", "RB", "RC", 
                      "RP", "SC", "SL", "TI", "TIAM", "TICA", "TIVL", "VL", 
                      "VLVL", "BINARY_BASE", "BLOCK_COMMENT", "DECIMAL_BASE", 
                      "ESCAPED_IDENTIFIER", "EXPONENTIAL_NUMBER", "FIXED_POINT_NUMBER", 
                      "HEX_BASE", "LINE_COMMENT", "OCTAL_BASE", "SIMPLE_IDENTIFIER", 
                      "STRING", "SYSTEM_TF_IDENTIFIER", "UNSIGNED_NUMBER", 
                      "WHITE_SPACE", "BINARY_VALUE", "X_OR_Z_UNDERSCORE", 
                      "EDGE_DESCRIPTOR", "HEX_VALUE", "FILE_PATH_SPEC", 
                      "OCTAL_VALUE", "EDGE_SYMBOL", "LEVEL_ONLY_SYMBOL", 
                      "OUTPUT_OR_LEVEL_SYMBOL", "BEGIN_KEYWORDS_DIRECTIVE", 
                      "CELLDEFINE_DIRECTIVE", "DEFAULT_NETTYPE_DIRECTIVE", 
                      "DEFINE_DIRECTIVE", "ELSE_DIRECTIVE", "ELSIF_DIRECTIVE", 
                      "END_KEYWORDS_DIRECTIVE", "ENDCELLDEFINE_DIRECTIVE", 
                      "ENDIF_DIRECTIVE", "IFDEF_DIRECTIVE", "IFNDEF_DIRECTIVE", 
                      "INCLUDE_DIRECTIVE", "LINE_DIRECTIVE", "NOUNCONNECTED_DRIVE_DIRECTIVE", 
                      "PRAGMA_DIRECTIVE", "RESETALL_DIRECTIVE", "TIMESCALE_DIRECTIVE", 
                      "UNCONNECTED_DRIVE_DIRECTIVE", "UNDEF_DIRECTIVE", 
                      "MACRO_USAGE", "VERSION_SPECIFIER", "DEFAULT_NETTYPE_VALUE", 
                      "MACRO_NAME", "FILENAME", "MACRO_DELIMITER", "MACRO_ESC_NEWLINE", 
                      "MACRO_ESC_QUOTE", "MACRO_QUOTE", "MACRO_TEXT", "SOURCE_TEXT", 
                      "TIME_UNIT", "TIME_VALUE", "UNCONNECTED_DRIVE_VALUE", 
                      "MACRO_IDENTIFIER" ]

    RULE_source_text = 0
    RULE_compiler_directive = 1
    RULE_begin_keywords_directive = 2
    RULE_celldefine_directive = 3
    RULE_default_nettype_directive = 4
    RULE_default_nettype_value = 5
    RULE_else_directive = 6
    RULE_elsif_directive = 7
    RULE_end_keywords_directive = 8
    RULE_endcelldefine_directive = 9
    RULE_endif_directive = 10
    RULE_filename = 11
    RULE_group_of_lines = 12
    RULE_identifier = 13
    RULE_ifdef_directive = 14
    RULE_ifndef_directive = 15
    RULE_include_directive = 16
    RULE_level = 17
    RULE_line_directive = 18
    RULE_macro_delimiter = 19
    RULE_macro_esc_newline = 20
    RULE_macro_esc_quote = 21
    RULE_macro_identifier = 22
    RULE_macro_name = 23
    RULE_macro_quote = 24
    RULE_macro_text = 25
    RULE_macro_text_ = 26
    RULE_macro_usage = 27
    RULE_nounconnected_drive_directive = 28
    RULE_number = 29
    RULE_pragma_directive = 30
    RULE_pragma_expression = 31
    RULE_pragma_keyword = 32
    RULE_pragma_name = 33
    RULE_pragma_value = 34
    RULE_resetall_directive = 35
    RULE_source_text_ = 36
    RULE_string_ = 37
    RULE_text_macro_definition = 38
    RULE_text_macro_usage = 39
    RULE_time_precision = 40
    RULE_time_unit = 41
    RULE_timescale_directive = 42
    RULE_unconnected_drive_directive = 43
    RULE_unconnected_drive_value = 44
    RULE_undef_directive = 45
    RULE_version_specifier = 46

    ruleNames =  [ "source_text", "compiler_directive", "begin_keywords_directive", 
                   "celldefine_directive", "default_nettype_directive", 
                   "default_nettype_value", "else_directive", "elsif_directive", 
                   "end_keywords_directive", "endcelldefine_directive", 
                   "endif_directive", "filename", "group_of_lines", "identifier", 
                   "ifdef_directive", "ifndef_directive", "include_directive", 
                   "level", "line_directive", "macro_delimiter", "macro_esc_newline", 
                   "macro_esc_quote", "macro_identifier", "macro_name", 
                   "macro_quote", "macro_text", "macro_text_", "macro_usage", 
                   "nounconnected_drive_directive", "number", "pragma_directive", 
                   "pragma_expression", "pragma_keyword", "pragma_name", 
                   "pragma_value", "resetall_directive", "source_text_", 
                   "string_", "text_macro_definition", "text_macro_usage", 
                   "time_precision", "time_unit", "timescale_directive", 
                   "unconnected_drive_directive", "unconnected_drive_value", 
                   "undef_directive", "version_specifier" ]

    EOF = Token.EOF
    ALWAYS=1
    AND=2
    ASSIGN=3
    AUTOMATIC=4
    BEGIN=5
    BUF=6
    BUFIFONE=7
    BUFIFZERO=8
    CASE=9
    CASEX=10
    CASEZ=11
    CELL=12
    CMOS=13
    CONFIG=14
    DEASSIGN=15
    DEFAULT=16
    DEFPARAM=17
    DESIGN=18
    DISABLE=19
    DLFULLSKEW=20
    DLHOLD=21
    DLNOCHANGE=22
    DLPERIOD=23
    DLRECOVERY=24
    DLRECREM=25
    DLREMOVAL=26
    DLSETUP=27
    DLSETUPHOLD=28
    DLSKEW=29
    DLTIMESKEW=30
    DLWIDTH=31
    EDGE=32
    ELSE=33
    END=34
    ENDCASE=35
    ENDCONFIG=36
    ENDFUNCTION=37
    ENDGENERATE=38
    ENDMODULE=39
    ENDPRIMITIVE=40
    ENDSPECIFY=41
    ENDTABLE=42
    ENDTASK=43
    EVENT=44
    FOR=45
    FORCE=46
    FOREVER=47
    FORK=48
    FUNCTION=49
    GENERATE=50
    GENVAR=51
    HIGHZONE=52
    HIGHZZERO=53
    IF=54
    IFNONE=55
    INCLUDE=56
    INITIAL=57
    INOUT=58
    INPUT=59
    INSTANCE=60
    INTEGER=61
    JOIN=62
    LARGE=63
    LIBLIST=64
    LIBRARY=65
    LOCALPARAM=66
    MACROMODULE=67
    MEDIUM=68
    MIINCDIR=69
    MODULE=70
    NAND=71
    NEGEDGE=72
    NMOS=73
    NOR=74
    NOSHOWCANCELLED=75
    NOT=76
    NOTIFONE=77
    NOTIFZERO=78
    OR=79
    OUTPUT=80
    PARAMETER=81
    PATHPULSEDL=82
    PMOS=83
    POSEDGE=84
    PRIMITIVE=85
    PULLDOWN=86
    PULLONE=87
    PULLUP=88
    PULLZERO=89
    PULSESTYLE_ONDETECT=90
    PULSESTYLE_ONEVENT=91
    RCMOS=92
    REAL=93
    REALTIME=94
    REG=95
    RELEASE=96
    REPEAT=97
    RNMOS=98
    RPMOS=99
    RTRAN=100
    RTRANIFONE=101
    RTRANIFZERO=102
    SCALARED=103
    SHOWCANCELLED=104
    SIGNED=105
    SMALL=106
    SPECIFY=107
    SPECPARAM=108
    STRONGONE=109
    STRONGZERO=110
    SUPPLYONE=111
    SUPPLYZERO=112
    TABLE=113
    TASK=114
    TIME=115
    TRAN=116
    TRANIFONE=117
    TRANIFZERO=118
    TRI=119
    TRIAND=120
    TRIONE=121
    TRIOR=122
    TRIREG=123
    TRIZERO=124
    USE=125
    UWIRE=126
    VECTORED=127
    WAIT=128
    WAND=129
    WEAKONE=130
    WEAKZERO=131
    WHILE=132
    WIRE=133
    WOR=134
    XNOR=135
    XOR=136
    AM=137
    AMAM=138
    AMAMAM=139
    AS=140
    ASAS=141
    ASGT=142
    AT=143
    CA=144
    CATI=145
    CL=146
    CO=147
    DL=148
    DQ=149
    DT=150
    EM=151
    EMEQ=152
    EMEQEQ=153
    EQ=154
    EQEQ=155
    EQEQEQ=156
    EQGT=157
    GA=158
    GT=159
    GTEQ=160
    GTGT=161
    GTGTGT=162
    HA=163
    LB=164
    LC=165
    LP=166
    LT=167
    LTEQ=168
    LTLT=169
    LTLTLT=170
    MI=171
    MICL=172
    MIGT=173
    MO=174
    PL=175
    PLCL=176
    QM=177
    RB=178
    RC=179
    RP=180
    SC=181
    SL=182
    TI=183
    TIAM=184
    TICA=185
    TIVL=186
    VL=187
    VLVL=188
    BINARY_BASE=189
    BLOCK_COMMENT=190
    DECIMAL_BASE=191
    ESCAPED_IDENTIFIER=192
    EXPONENTIAL_NUMBER=193
    FIXED_POINT_NUMBER=194
    HEX_BASE=195
    LINE_COMMENT=196
    OCTAL_BASE=197
    SIMPLE_IDENTIFIER=198
    STRING=199
    SYSTEM_TF_IDENTIFIER=200
    UNSIGNED_NUMBER=201
    WHITE_SPACE=202
    BINARY_VALUE=203
    X_OR_Z_UNDERSCORE=204
    EDGE_DESCRIPTOR=205
    HEX_VALUE=206
    FILE_PATH_SPEC=207
    OCTAL_VALUE=208
    EDGE_SYMBOL=209
    LEVEL_ONLY_SYMBOL=210
    OUTPUT_OR_LEVEL_SYMBOL=211
    BEGIN_KEYWORDS_DIRECTIVE=212
    CELLDEFINE_DIRECTIVE=213
    DEFAULT_NETTYPE_DIRECTIVE=214
    DEFINE_DIRECTIVE=215
    ELSE_DIRECTIVE=216
    ELSIF_DIRECTIVE=217
    END_KEYWORDS_DIRECTIVE=218
    ENDCELLDEFINE_DIRECTIVE=219
    ENDIF_DIRECTIVE=220
    IFDEF_DIRECTIVE=221
    IFNDEF_DIRECTIVE=222
    INCLUDE_DIRECTIVE=223
    LINE_DIRECTIVE=224
    NOUNCONNECTED_DRIVE_DIRECTIVE=225
    PRAGMA_DIRECTIVE=226
    RESETALL_DIRECTIVE=227
    TIMESCALE_DIRECTIVE=228
    UNCONNECTED_DRIVE_DIRECTIVE=229
    UNDEF_DIRECTIVE=230
    MACRO_USAGE=231
    VERSION_SPECIFIER=232
    DEFAULT_NETTYPE_VALUE=233
    MACRO_NAME=234
    FILENAME=235
    MACRO_DELIMITER=236
    MACRO_ESC_NEWLINE=237
    MACRO_ESC_QUOTE=238
    MACRO_QUOTE=239
    MACRO_TEXT=240
    SOURCE_TEXT=241
    TIME_UNIT=242
    TIME_VALUE=243
    UNCONNECTED_DRIVE_VALUE=244
    MACRO_IDENTIFIER=245

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Source_textContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compiler_directive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerilogPreParser.Compiler_directiveContext)
            else:
                return self.getTypedRuleContext(VerilogPreParser.Compiler_directiveContext,i)


        def getRuleIndex(self):
            return VerilogPreParser.RULE_source_text

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource_text" ):
                return visitor.visitSource_text(self)
            else:
                return visitor.visitChildren(self)




    def source_text(self):

        localctx = VerilogPreParser.Source_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==158:
                self.state = 94
                self.compiler_directive()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compiler_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def begin_keywords_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Begin_keywords_directiveContext,0)


        def celldefine_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Celldefine_directiveContext,0)


        def default_nettype_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Default_nettype_directiveContext,0)


        def end_keywords_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.End_keywords_directiveContext,0)


        def endcelldefine_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Endcelldefine_directiveContext,0)


        def ifdef_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Ifdef_directiveContext,0)


        def ifndef_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Ifndef_directiveContext,0)


        def include_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Include_directiveContext,0)


        def line_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Line_directiveContext,0)


        def nounconnected_drive_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Nounconnected_drive_directiveContext,0)


        def pragma_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Pragma_directiveContext,0)


        def resetall_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Resetall_directiveContext,0)


        def text_macro_definition(self):
            return self.getTypedRuleContext(VerilogPreParser.Text_macro_definitionContext,0)


        def text_macro_usage(self):
            return self.getTypedRuleContext(VerilogPreParser.Text_macro_usageContext,0)


        def timescale_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Timescale_directiveContext,0)


        def unconnected_drive_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Unconnected_drive_directiveContext,0)


        def undef_directive(self):
            return self.getTypedRuleContext(VerilogPreParser.Undef_directiveContext,0)


        def getRuleIndex(self):
            return VerilogPreParser.RULE_compiler_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompiler_directive" ):
                return visitor.visitCompiler_directive(self)
            else:
                return visitor.visitChildren(self)




    def compiler_directive(self):

        localctx = VerilogPreParser.Compiler_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_compiler_directive)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.begin_keywords_directive()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.celldefine_directive()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.default_nettype_directive()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.end_keywords_directive()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.endcelldefine_directive()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.ifdef_directive()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.ifndef_directive()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.include_directive()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.line_directive()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.nounconnected_drive_directive()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.pragma_directive()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.resetall_directive()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.text_macro_definition()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 113
                self.text_macro_usage()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 114
                self.timescale_directive()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 115
                self.unconnected_drive_directive()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 116
                self.undef_directive()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Begin_keywords_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GA(self):
            return self.getToken(VerilogPreParser.GA, 0)

        def BEGIN_KEYWORDS_DIRECTIVE(self):
            return self.getToken(VerilogPreParser.BEGIN_KEYWORDS_DIRECTIVE, 0)

        def DQ(self, i:int=None):
            if i is None:
                return self.getTokens(VerilogPreParser.DQ)
            else:
                return self.getToken(VerilogPreParser.DQ, i)

        def version_specifier(self):
            return self.getTypedRuleContext(VerilogPreParser.Version_specifierContext,0)


        def getRuleIndex(self):
            return VerilogPreParser.RULE_begin_keywords_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBegin_keywords_directive" ):
                return visitor.visitBegin_keywords_directive(self)
            else:
                return visitor.visitChildren(self)




    def begin_keywords_directive(self):

        localctx = VerilogPreParser.Begin_keywords_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_begin_keywords_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(VerilogPreParser.GA)
            self.state = 120
            self.match(VerilogPreParser.BEGIN_KEYWORDS_DIRECTIVE)
            self.state = 121
            self.match(VerilogPreParser.DQ)
            self.state = 122
            self.version_specifier()
            self.state = 123
            self.match(VerilogPreParser.DQ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Celldefine_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GA(self):
            return self.getToken(VerilogPreParser.GA, 0)

        def CELLDEFINE_DIRECTIVE(self):
            return self.getToken(VerilogPreParser.CELLDEFINE_DIRECTIVE, 0)

        def getRuleIndex(self):
            return VerilogPreParser.RULE_celldefine_directive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCelldefine_directive" ):
                return visitor.visitCelldefine_directive(self)
            else:
                return visitor.visitChildren(self)




    def celldefine_directive(self):

        localctx = VerilogPreParser.Celldefine_directiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_celldefine_directive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(VerilogPreParser.GA)
            self.state = 126
            self.match(VerilogPreParser.CELLDEFINE_DIRECTIVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Default_nettype_directiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GA(self):
            return self.getToken(VerilogPreParser.GA, 0)
